Minor splitting of the cells

--- a/week_04/text_classification/text_classification_project.ipynb
+++ b/week_04/text_classification/text_classification_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "0.7746478873239436"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,35 +90,30 @@
     "            lyrics += child.text\n",
     "    return lyrics\n",
     "\n",
-    "# extract_lyrics_from_url('https://www.lyrics.com/lyric/36854002/Linkin+Park/In+the+End')\n",
-    "\n",
     "# imagine_dragons_df[\"Lyrics\"] = imagine_dragons_df['Link'].apply(extract_lyrics_from_url)\n",
-    "\n",
-    "\n",
     "# imagine_dragons_df.to_csv(\"../data/imagine_dragons_lyrics_df.csv\")\n",
     "\n",
     "\n",
     "# linkin_park_df[\"Lyrics\"] = linkin_park_df['Link'].apply(extract_lyrics_from_url)\n",
-    "\n",
-    "\n",
     "# linkin_park_df.to_csv(\"../data/linkin_park_df_lyrics_df.csv\")\n",
     "\n",
-    "\n",
-    "\n",
     "imagine_dragons_df = pd.read_csv(\"../data/imagine_dragons_lyrics_df.csv\")\n",
-    "\n",
-    "\n",
-    "linkin_park_df = pd.read_csv(\"../data/linkin_park_df_lyrics_df.csv\")\n",
+    "linkin_park_df = pd.read_csv(\"../data/linkin_park_df_lyrics_df.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "\n",
     "df = pd.concat([imagine_dragons_df,linkin_park_df])\n",
     "\n",
-    "\n",
     "X = df[[\"Lyrics\"]]\n",
     "X = X.assign(Lyrics = X[\"Lyrics\"].astype(str))\n",
     "X['Lyrics'] = X['Lyrics'].apply(lambda x : x.replace(\"\\r\", \"\"))\n",
-    "X\n",
-    "\n",
     "\n",
     "\n",
     "y_true = pd.Series([1] * imagine_dragons_df.shape[0] + [0] * linkin_park_df.shape[0])\n",
@@ -127,7 +122,6 @@
     "\n",
     "\n",
     "vectorizer = CountVectorizer(lowercase=True, stop_words='english', token_pattern='[A-Za-z]+', ngram_range=(1,1))\n",
-    "# # vectorizer = CountVectorizer(lowercase=True, stop_words='english', analyzer='word', ngram_range=(1,1))\n",
     "\n",
     "X_train_cv = vectorizer.fit_transform(X_train[\"Lyrics\"])\n",
     "# df_bow_sklearn = pd.DataFrame(X_train_cv.toarray(), columns=vectorizer.get_feature_names_out())\n",
@@ -135,13 +129,11 @@
     "\n",
     "\n",
     "logreg_cv = LogisticRegression(max_iter=6000)\n",
-    "\n",
     "logreg_cv.fit(X_train_cv, y_train)\n",
     "\n",
     "X_test_cv = vectorizer.transform(X_test[\"Lyrics\"])\n",
     "\n",
-    "logreg_cv.score(X_test_cv, y_test)\n",
-    "\n"
+    "logreg_cv.score(X_test_cv, y_test)"
    ]
   }
  ],
