Added multi-thread lyrics extraction which is by two factors faster

--- a/week_04/text_classification/text_classification_project.ipynb
+++ b/week_04/text_classification/text_classification_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,25 @@
     "\n",
     "import time\n",
     "\n",
+    "import tqdm\n",
+    "import threading\n",
+    "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "def extract_lyrics_from_url(url, songs, i):\n",
+    "\n",
+    "    # time.sleep(10)\n",
+    "    print(\"Extrating from \", url)\n",
+    "    soup = BeautifulSoup(requests.get(url).text)\n",
+    "    lyrics = \"\"\n",
+    "    lyrics_tag = soup.find('pre', attrs={'id' : 'lyric-body-text'})\n",
+    "    if lyrics_tag :\n",
+    "        for child in lyrics_tag.children:\n",
+    "            lyrics += child.text\n",
+    "    # return lyrics\n",
+    "    songs[i] = lyrics\n",
     "\n",
     "\n",
     "def extract_songs(artist):\n",
@@ -37,47 +53,44 @@
     "    songs_df = pd.DataFrame(columns=[\"Title\", \"Link\"])\n",
     "    songs_df['Title'] = songs.keys()\n",
     "    songs_df['Link'] = songs.values()\n",
+    "\n",
+    "    all_lyrics = [None] * songs_df['Link'].shape[0]\n",
+    "    threads = []\n",
+    "\n",
+    "    for index, url in enumerate(songs_df['Link'].values) :\n",
+    "\n",
+    "        t = threading.Thread(target=extract_lyrics_from_url, args=[url,all_lyrics,index])\n",
+    "        t.start()\n",
+    "        threads.append(t)\n",
+    "\n",
+    "    for thread in threads:\n",
+    "        thread.join()\n",
+    "\n",
+    "    songs_df[\"Lyrics\"] = all_lyrics\n",
+    "\n",
     "    return songs_df\n",
     "\n",
     "\n",
-    "# imagine_dragons_url = 'https://www.lyrics.com/artist/Imagine-Dragons'\n",
-    "# imagine_dragons_html = requests.get(imagine_dragons_url).text\n",
-    "\n",
-    "# imagine_dragons_soup = BeautifulSoup(imagine_dragons_html)\n",
-    "\n",
-    "# imagine_dragons_df = extract_songs('Imagine-Dragons')\n",
-    "# imagine_dragons_df.to_csv(\"../data/imagine_dragons_songs.csv\")"
+    "imagine_dragons_df = extract_songs('Imagine-Dragons')\n",
+    "imagine_dragons_df.to_csv(\"../data/imagine_dragons_songs.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# linkin_park_df = extract_songs('Linkin-Park')\n",
-    "# linkin_park_df.to_csv(\"../data/linkin_park_songs.csv\")"
+    "linkin_park_df = extract_songs('Linkin-Park')\n",
+    "linkin_park_df.to_csv(\"../data/linkin_park_songs.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tqdm\n",
-    "\n",
-    "def extract_lyrics_from_url(url):\n",
-    "\n",
-    "    # time.sleep(10)\n",
-    "    print(\"Extrating from \", url)\n",
-    "    soup = BeautifulSoup(requests.get(url).text)\n",
-    "    lyrics = \"\"\n",
-    "    lyrics_tag = soup.find('pre', attrs={'id' : 'lyric-body-text'})\n",
-    "    if lyrics_tag :\n",
-    "        for child in lyrics_tag.children:\n",
-    "            lyrics += child.text\n",
-    "    return lyrics\n",
     "\n",
     "# imagine_dragons_df[\"Lyrics\"] = imagine_dragons_df['Link'].apply(extract_lyrics_from_url)\n",
     "# imagine_dragons_df.to_csv(\"../data/imagine_dragons_lyrics_df.csv\")\n",
@@ -86,13 +99,13 @@
     "# linkin_park_df[\"Lyrics\"] = linkin_park_df['Link'].apply(extract_lyrics_from_url)\n",
     "# linkin_park_df.to_csv(\"../data/linkin_park_df_lyrics_df.csv\")\n",
     "\n",
-    "imagine_dragons_df = pd.read_csv(\"../data/imagine_dragons_lyrics_df.csv\")\n",
-    "linkin_park_df = pd.read_csv(\"../data/linkin_park_df_lyrics_df.csv\")\n"
+    "# imagine_dragons_df = pd.read_csv(\"../data/imagine_dragons_lyrics_df.csv\")\n",
+    "# linkin_park_df = pd.read_csv(\"../data/linkin_park_df_lyrics_df.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,20 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7746478873239436"
-      ]
-     },
-     "execution_count": 241,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "vectorizer = CountVectorizer(lowercase=True, stop_words='english', token_pattern='[A-Za-z]+', ngram_range=(1,1))\n",
