Fixed issue where even promo songs in the website were extracted

--- a/week_04/text_classification/text_classification_project.ipynb
+++ b/week_04/text_classification/text_classification_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
+    "# if set to true the lyrics are extracted again and csv files\n",
+    "# are refreshed with the extracted lyrics\n",
+    "g_refresh_lyrics = False\n",
+    "\n",
     "def extract_lyrics_from_url(url, songs, i):\n",
     "\n",
     "    # time.sleep(10)\n",
@@ -34,7 +38,6 @@
     "    if lyrics_tag :\n",
     "        for child in lyrics_tag.children:\n",
     "            lyrics += child.text\n",
-    "    # return lyrics\n",
     "    songs[i] = lyrics\n",
     "\n",
     "\n",
@@ -46,19 +49,19 @@
     "    songs = dict()\n",
     "    square_bracket_pattern = ' [\\[].*[\\]]'\n",
     "    link_constant = 'https://www.lyrics.com/'\n",
-    "    for song in soup.find_all('strong'):\n",
-    "        a = song.find('a')\n",
+    "    # for song in soup.find_all('strong'):\n",
+    "    for song in soup.find_all('td', attrs={'class':'tal qx'}):\n",
+    "        a = song.find('strong').find('a')\n",
     "        if a and not (re.findall(square_bracket_pattern, a.text)) :\n",
     "            songs[a.text.lower()] = link_constant + a.get('href')\n",
     "    songs_df = pd.DataFrame(columns=[\"Title\", \"Link\"])\n",
     "    songs_df['Title'] = songs.keys()\n",
     "    songs_df['Link'] = songs.values()\n",
     "\n",
+    "    # each thread extracts lyrics from each url\n",
     "    all_lyrics = [None] * songs_df['Link'].shape[0]\n",
     "    threads = []\n",
-    "\n",
     "    for index, url in enumerate(songs_df['Link'].values) :\n",
-    "\n",
     "        t = threading.Thread(target=extract_lyrics_from_url, args=[url,all_lyrics,index])\n",
     "        t.start()\n",
     "        threads.append(t)\n",
@@ -68,62 +71,48 @@
     "\n",
     "    songs_df[\"Lyrics\"] = all_lyrics\n",
     "\n",
-    "    return songs_df\n",
-    "\n",
-    "\n",
-    "imagine_dragons_df = extract_songs('Imagine-Dragons')\n",
-    "imagine_dragons_df.to_csv(\"../data/imagine_dragons_songs.csv\")"
+    "    return songs_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "linkin_park_df = extract_songs('Linkin-Park')\n",
-    "linkin_park_df.to_csv(\"../data/linkin_park_songs.csv\")"
+    "if g_refresh_lyrics :\n",
+    "    imagine_dragons_df = extract_songs('Imagine-Dragons')\n",
+    "    imagine_dragons_df.to_csv(\"../data/imagine_dragons_songs.csv\")\n",
+    "\n",
+    "    linkin_park_df = extract_songs('Linkin-Park')\n",
+    "    linkin_park_df.to_csv(\"../data/linkin_park_songs.csv\")\n",
+    "else :\n",
+    "    imagine_dragons_df = pd.read_csv(\"../data/imagine_dragons_songs.csv\")\n",
+    "    linkin_park_df = pd.read_csv(\"../data/linkin_park_songs.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# imagine_dragons_df[\"Lyrics\"] = imagine_dragons_df['Link'].apply(extract_lyrics_from_url)\n",
-    "# imagine_dragons_df.to_csv(\"../data/imagine_dragons_lyrics_df.csv\")\n",
-    "\n",
-    "\n",
-    "# linkin_park_df[\"Lyrics\"] = linkin_park_df['Link'].apply(extract_lyrics_from_url)\n",
-    "# linkin_park_df.to_csv(\"../data/linkin_park_df_lyrics_df.csv\")\n",
-    "\n",
-    "# imagine_dragons_df = pd.read_csv(\"../data/imagine_dragons_lyrics_df.csv\")\n",
-    "# linkin_park_df = pd.read_csv(\"../data/linkin_park_df_lyrics_df.csv\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
+    "# Create the lyrics data base\n",
     "df = pd.concat([imagine_dragons_df,linkin_park_df])\n",
-    "\n",
     "X = df[[\"Lyrics\"]]\n",
+    "\n",
+    "# convert the lyrics column type to string otherwise it is considered\n",
+    "# as float\n",
     "X = X.assign(Lyrics = X[\"Lyrics\"].astype(str))\n",
+    "# remove all the \\r from the lyrics\n",
     "X['Lyrics'] = X['Lyrics'].apply(lambda x : x.replace(\"\\r\", \"\"))\n",
     "\n",
-    "y_true = pd.Series([1] * imagine_dragons_df.shape[0] + [0] * linkin_park_df.shape[0])\n",
-    "\n"
+    "y_true = pd.Series([1] * imagine_dragons_df.shape[0] + [0] * linkin_park_df.shape[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,9 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7692307692307693"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "vectorizer = CountVectorizer(lowercase=True, stop_words='english', token_pattern='[A-Za-z]+', ngram_range=(1,1))\n",
