Added naive bayes as baseline model

--- a/week_04/text_classification/text_classification_project.ipynb
+++ b/week_04/text_classification/text_classification_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,9 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# if set to true the lyrics are extracted again and csv files\n",
     "# are refreshed with the extracted lyrics\n",
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,12 +110,13 @@
     "# remove all the \\r from the lyrics\n",
     "X['Lyrics'] = X['Lyrics'].apply(lambda x : x.replace(\"\\r\", \"\"))\n",
     "\n",
+    "# create targets\n",
     "y_true = pd.Series([1] * imagine_dragons_df.shape[0] + [0] * linkin_park_df.shape[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7692307692307693"
+       "0.8307692307692308"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,17 +145,14 @@
     "\n",
     "vectorizer = CountVectorizer(lowercase=True, stop_words='english', token_pattern='[A-Za-z]+', ngram_range=(1,1))\n",
     "\n",
-    "X_train_cv = vectorizer.fit_transform(X_train[\"Lyrics\"])\n",
-    "# df_bow_sklearn = pd.DataFrame(X_train_cv.toarray(), columns=vectorizer.get_feature_names_out())\n",
-    "# df_bow_sklearn.head()\n",
+    "nb_classifying_pipeline = Pipeline([\n",
+    "    ('vect', CountVectorizer(lowercase=True, stop_words='english', token_pattern='[A-Za-z]+', ngram_range=(1,1))),\n",
+    "    ('model', MultinomialNB())])\n",
     "\n",
     "\n",
-    "logreg_cv = LogisticRegression(max_iter=6000)\n",
-    "logreg_cv.fit(X_train_cv, y_train)\n",
-    "\n",
-    "X_test_cv = vectorizer.transform(X_test[\"Lyrics\"])\n",
-    "\n",
-    "logreg_cv.score(X_test_cv, y_test)"
+    "nb_classifying_pipeline.fit(X_train[\"Lyrics\"], y_train)\n",
+    "y_pred = nb_classifying_pipeline.predict(X_test[\"Lyrics\"])\n",
+    "accuracy_score(y_test, y_pred)\n"
    ]
   }
  ],
