--- a/week_04/text_classification/text_classification_project.ipynb
+++ b/week_04/text_classification/text_classification_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
     "import threading\n",
     "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -74,12 +74,18 @@
     "\n",
     "    songs_df[\"Lyrics\"] = all_lyrics\n",
     "\n",
-    "    return songs_df"
+    "    return songs_df\n",
+    "\n",
+    "def print_hypermaters_search_results(results):\n",
+    "    print('BEST MODEL PARAMETERS: {}\\n'.format(results.best_params_))\n",
+    "    means = results.cv_results_['mean_test_score']\n",
+    "    for mean, params in zip(means, results.cv_results_['params']):\n",
+    "        print('{}  for {}'.format(round(mean, 4), params))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,19 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the lyrics data base\n",
     "df = pd.concat([imagine_dragons_df,linkin_park_df])\n",
-    "X = df[[\"Lyrics\"]]\n",
+    "# X = df[[\"Lyrics\"]]\n",
     "\n",
     "# convert the lyrics column type to string otherwise it is considered\n",
     "# as float\n",
-    "X = X.assign(Lyrics = X[\"Lyrics\"].astype(str))\n",
+    "df = df.assign(Lyrics = df[\"Lyrics\"].astype(str))\n",
     "# remove all the \\r from the lyrics\n",
-    "X['Lyrics'] = X['Lyrics'].apply(lambda x : x.replace(\"\\r\", \"\"))\n",
+    "X = df['Lyrics'].apply(lambda x : x.replace(\"\\r\", \"\"))\n",
     "\n",
     "# create targets\n",
     "y_true = pd.Series([1] * imagine_dragons_df.shape[0] + [0] * linkin_park_df.shape[0])\n"
@@ -116,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +142,7 @@
        "0.8307692307692308"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,9 +156,75 @@
     "    ('model', MultinomialNB())])\n",
     "\n",
     "\n",
-    "nb_classifying_pipeline.fit(X_train[\"Lyrics\"], y_train)\n",
-    "y_pred = nb_classifying_pipeline.predict(X_test[\"Lyrics\"])\n",
+    "nb_classifying_pipeline.fit(X_train, y_train)\n",
+    "y_pred = nb_classifying_pipeline.predict(X_test)\n",
     "accuracy_score(y_test, y_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sgd_classifying_pipeline = Pipeline([\n",
+    "    ('vect', CountVectorizer(lowercase=True, stop_words='english', token_pattern='[A-Za-z]+', ngram_range=(1,1))),\n",
+    "    ('clf', SGDClassifier(loss='hinge', penalty='l2',alpha=1e-3, random_state=42, max_iter=5, tol=None))])\n",
+    "\n",
+    "# sgd_classifying_pipeline.fit(X_train, y_train)\n",
+    "# y_pred = sgd_classifying_pipeline.predict(X_test)\n",
+    "# accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BEST MODEL PARAMETERS: {'clf__alpha': 0.001, 'vect__ngram_range': (1, 2)}\n",
+      "\n",
+      "0.7217  for {'clf__alpha': 0.01, 'vect__ngram_range': (1, 1)}\n",
+      "0.7677  for {'clf__alpha': 0.01, 'vect__ngram_range': (1, 2)}\n",
+      "0.7424  for {'clf__alpha': 0.001, 'vect__ngram_range': (1, 1)}\n",
+      "0.7729  for {'clf__alpha': 0.001, 'vect__ngram_range': (1, 2)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sgd_parameters = {'vect__ngram_range': [(1, 1), (1, 2)],\n",
+    "'clf__alpha': (1e-2, 1e-3) }\n",
+    "\n",
+    "sgd_grid_search_clf = GridSearchCV(sgd_classifying_pipeline, sgd_parameters, cv=5, n_jobs=-1, scoring='accuracy')\n",
+    "\n",
+    "sgd_grid_search_clf.fit(X_train, y_train)\n",
+    "\n",
+    "print_hypermaters_search_results(sgd_grid_search_clf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8615384615384616"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "y_pred = sgd_grid_search_clf.predict(X_test)\n",
+    "accuracy_score(y_test, y_pred)"
    ]
   }
  ],
